# IBiSA_tools

./: README.md
doc/: Makefile
doc/source/: about.rst  appendix.rst  conf.py  index.rst  overview.rst  tutorial.rst
doc/source/images/: dendrogram.ai  dendrogram.eps  density_distribution.eps  fig_overview_detail.ai
r/: clustering_seq.R  density_2d.R  histogram.R  pore_axis_density.R  pore_axis_traj.R
sample/: initial.gro  isac-md.tcsh  trachan_config.txt
src_trachan/: AtomInfo.cpp  AtomInfo.h  ChangeLog  ChannelStructure.cpp  ChannelStructure.h  Config.cpp  Config.h  Coord.cpp  Coord.h  FileIo.cpp  FileIo.h  Makefile.am  Makefile.back  Makefile.in  NEWS  PDBio.cpp  PDBio.h  Read.cpp  Read.h  System.cpp  System.h  TraChan.cpp  TraChan.h  TrnHeader.cpp  TrnHeader.h  XDRio.cpp  XDRio.h  config.h  config.status  configure  configure.in  configure.scan  define.h  main.cpp  trachan
src_trachan/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
